# toy-bot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: framework.rs  main.rs
src/commands/: color.rs  file.rs  meta.rs  mod.rs
src/utils/: error.rs
